k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-sem-lab-ingress
  namespace: in-sem-lab
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: in-sem-lab.example.com # replace with your host or use nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
